exports[`test the Large Secondary Button matches the snapshot 1`] = `
<button
  className="bvjOnJ"
  type="button">
  ButtonValue
</button>
`;

exports[`test the beacon button matches the snapshot 1`] = `
<button
  aria-label=""
  className="gkcyrM"
  type="button">
  ButtonValue
</button>
`;

exports[`test the button handling an onclick event 1`] = `
<button
  className="byhavi"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the button handling an onclick event 2`] = `
<button
  className="byhavi"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the button matches the snapshot 1`] = `
<button
  className="byhavi"
  type="button">
  ButtonValue
</button>
`;

exports[`test the button with button type given matches the snapshot 1`] = `
<button
  className="byhavi"
  type="button">
  ButtonValue
</button>
`;
